Fix button float on small layout

--- a/info-pages.css
+++ b/info-pages.css
@@ -398,4 +398,9 @@ button:disabled,
 		padding-bottom: 0;
 		border-bottom: none;
 	}
+
+	.advancedButton {
+  float: none;
+  }
+
 }
